# h5i

./: .current_branch  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  MANUAL.md  NOTICE  README.md  SECURITY.md  agents.json  build.rs  commit.md  dag.json  ephemeral.md  events.jsonl  install.sh  main.md  manifests.jsonl  messages.jsonl  policies.jsonl  recaps.json  trace.md
.claude/: h5i.md  settings.json
.codex/: config.toml
.github/workflows/: release.yaml  test.yaml
.h5i/cargo-target/: .rustc_info.json
assets/: a.py
assets/filters/: NOTICE  black.toml  bun.toml  clang.toml  cmake.toml  deno.toml  docker-build.toml  docker-compose.toml  eslint.toml  flake8.toml  glab.toml  go.toml  golangci-lint.toml  gradle.toml  jest.toml  mvn-build.toml  mypy.toml  ninja.toml  npm.toml  phpunit.toml  pip.toml  playwright.toml  pnpm.toml  prettier.toml  prisma.toml  rake.toml  rspec.toml  rubocop.toml  ruff.toml  terraform-apply.toml  terraform-plan.toml  tsc.toml  vitest.toml  wget.toml  yarn.toml
branches/doc-cve/: commit.md  dag.json  trace.md
branches/improve-context/: commit.md  dag.json  ephemeral.md  trace.md
branches/main/: commit.md  dag.json  trace.md
branches/redesign-per-ref/: commit.md  dag.json  trace.md
containers/: Containerfile.agent-claude  Containerfile.agent-codex  README.md  entrypoint.sh
crates/h5i-cli/: Cargo.toml
crates/h5i-cli/src/: main.rs
crates/h5i-cli/tests/: orchestra_live.rs  orchestra_subprocess.rs
crates/h5i-core/: Cargo.toml  build.rs
crates/h5i-core/src/: attention.rs  cli_routing.rs  codex.rs  compliance.rs  env.rs  filter_rules.rs  idents.rs  injection.rs  lib.rs  mcp.rs  memory.rs  msg.rs  objects.rs  pr.rs  recap.rs  repository.rs  resume.rs  risk.rs  server.rs  team.rs  token_filter.rs  vibe.rs
crates/h5i-core/tests/: filter_quality.rs  prompt_score_gaming.rs  test_metrics_integration.rs
crates/h5i-error/: Cargo.toml
crates/h5i-orchestra/: Cargo.toml
crates/h5i-orchestra/src/: agent.rs  journal.rs  judge.rs  launcher.rs  lib.rs  manifest.rs  patterns.rs  rpc.rs  tests.rs  trace.rs
crates/h5i-sandbox/: Cargo.toml
crates/h5i-sandbox/src/: auth_proxy.rs  container.rs  lib.rs  sandbox.rs  sandbox_policy.rs  seccomp_notify.rs  secrets.rs  secrets_broker.rs
demo/video/: README.md  index.html  marketing.html  render.mjs
docs/: blog-uncertainty.md  borrowing-from-coasts.md  comparison.md  content-style-guide.md  credential-proxy-design.md  environments-design.md  feed.xml  i5h-design-notes.md  i5h-protocol.md  index.html  llms.txt  pitch.html  robots.txt  secrets-broker-design.md  sitemap.xml  supervisor-design.md  token-reduction.md  workflows.html
docs/_static/: blog.css  blog.js  claude-codex-chess.webm  highlight.css  highlight.js
docs/benchmarks/: env-overhead.md
docs/blog/: auditing-ai-generated-code.html  content-addressed-claims-agent-memory.html  from-git-blame-to-ai-blame.html  (+10 more)
examples/: bench_prompt_score.rs  env_setup.sh
git-goals/: add-blog-posts.md  audit-sandbox.md  auto-capture-cmd.md  communication.md  compare-with-agentmemory.md  doc-cve.md  faster-prompt-scoring.md  fix-push.md  fix-sandbox.md  ids.md  improve-context.md  improve-doc-style.md  improve-doc.md  improve-fund.md  improve-i5h.md  improve-pitch.md  improve-pr-style.md  improve-seo-blog.md  improve-shell.md  main.md  polish-doc.md  prompt-score.md  radio-tui.md  redesign-context-branch.md  sandbox-experiment.md  sandbox-worktree.md  survey-sandbox-for-codex.md  token-reduction.md  update-doc-with-i5h.md  update-doc.md  update-skill.md  yeah.md
plugin/: h5i-cargo-test-adapter.sh  h5i-ctx-hook.py  h5i-py-parser.py  h5i-pytest-adapter.py
roadmap/: blog-uncertainty.md  borrowing-from-coasts.md  borrowing-from-governance-planes.md  borrowing-from-openai-agents-sdk.md  borrowing-from-shepherd.md  compare-docker-agent.md  comparison-sandbox.md  comparison.md  ensemble_v1.md  ensemble_v2.md  environments-design.md  i5h-design-notes.md  i5h-protocol.md  model-pinning-design.md  new-commands.md  orchestra-design.md  supervisor-design.md  team-design.md  token-reduction.md  ui_v2.md
scripts/: demo-dag.sh  experiment_claims.sh  experiment_claims_results.md  experiment_handoff.sh  experiment_safe_sandbox_worktree.sh  experiment_safe_sandbox_worktree_results.md  experiment_safe_sandbox_worktree_workflow.md  experiment_token_reduction.sh  experiment_token_reduction_results.md  gen_man.sh  gen_manual.py  observe_multi.sh  observe_session.sh  render_dag.py  requirements.txt  team-launch.sh  team-review.sh  team-run.sh
snapshots/: 008ef423.md  017ea86a.md  02676795.md  056a2ff3.md  0642ce87.md  06ad00b5.md  06ed4fd6.md  072f36a5.md  0754cd63.md  0792d94f.md  08c047da.md  09ee4412.md  0af7d3c1.md  0be88d49.md  0ded2a57.md  0e18ead5.md  0f7f6b53.md  0f95f5d5.md  10eb58fb.md  116f6621.md  12582af3.md  12b62485.md  135cdb05.md  13918d17.md  13efa154.md  143fe389.md  1445fde7.md  14c8efd9.md  165c0610.md  1685dabe.md  1917be73.md  1954e493.md  19964ece.md  19aaf3c0.md  19c8b4b0.md  1ae1d45f.md  1bf84785.md  1ca8a987.md  1e514a5c.md  1f0a23dd.md  (+306 more)
src/: ast.rs  auth_proxy.rs  blame.rs  cgroup.rs  claims.rs  claude.rs  cli_routing.rs  cluster.rs  codex.rs  compliance.rs  container.rs  crdt.rs  ctx.rs  delta_store.rs  env.rs  error.rs  filter_rules.rs  hooks.rs  injection.rs  lfs.rs  lib.rs  main.rs  mcp.rs  memory.rs  metadata.rs  msg.rs  objects.rs  policy.rs  pr.rs  prompt_score.rs  radio.rs  repository.rs  resume.rs  review.rs  risk.rs  rules.rs  sandbox.rs  sandbox_policy.rs  seccomp_notify.rs  secrets.rs  (+14 more)
tests/: cli_integration.rs  e2e_noun_workflow.rs  env_integration.rs  filter_quality.rs  msg_integration.rs  objects_e2e.rs  orchestra_live.rs  orchestra_subprocess.rs  prompt_score_gaming.rs  sandbox_api.rs  test_metrics_integration.rs
tutorials/: 01-never-let-your-ai-forget.md  02-did-claude-know-what-it-was-doing.md  03-version-control-for-ai-reasoning.md  04-advanced-context-design-decisions.md
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+138 files in other folders)
