[package]
name = "h5i-core"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "h5i"
path = "src/main.rs"

[dependencies]
git2 = "0.20.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
fastrand = "2.3.0"
tiktoken-rs = "0.9.1"
console = "0.16.2"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
axum = "0.7"
toml = { version = "0.8", features = ["parse", "display"] }
regex = "1"
rust-embed = "8.5"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2.186"

# When targeting musl, vendor OpenSSL so the build doesn't require a musl-linked
# system libssl (libgit2-sys → libssh2-sys → openssl-sys pulls this in).
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
seccompiler = "0.5.0"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"

# This crate's units are big (main.rs, repository.rs, env.rs): full debuginfo is
# the dominant rustc-memory + link-time cost for test binaries, and it has
# OOM'd parallel test compiles on 8GB hosts. Line tables keep usable backtraces.
[profile.dev]
debug = "line-tables-only"
