[workspace]
members = ["crates/*"]
resolver = "2"

# Shared dependency versions for every workspace crate — a single source of
# truth so the crates never skew versions (a git2/serde mismatch would break
# `#[from]` conversions across a crate boundary).
[workspace.dependencies]
thiserror = "2.0.18"
git2 = "0.20.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["parse", "display"] }

# The repo's primary product is the `h5i` binary, so it lives at the root
# (`cargo install --path .` / `cargo run` do the obvious thing). The library it
# drives is `crates/h5i-core`; the eDSL is `crates/h5i-orchestra`.
[package]
name = "h5i"
version = "0.2.8"
edition = "2021"
description = "h5i — auditable, sandboxed workspaces and programmable orchestration for AI coding agents (CLI)."

[[bin]]
name = "h5i"
path = "src/main.rs"

[features]
# Mirror the core `web` feature so `cargo build` / `--no-default-features`
# toggle the dashboard exactly as before.
default = ["web"]
web = ["h5i-core/web"]

[dependencies]
h5i-core = { path = "crates/h5i-core" }
h5i-orchestra = { path = "crates/h5i-orchestra" }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
console = "0.16.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.8"
serde_json = { workspace = true }
# For the web-gated sandbox_api integration test (boots the real axum router).
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Big translation units (main.rs, and the core lib's repository.rs/env.rs): full
# debuginfo dominates rustc memory + link time and has OOM'd parallel test
# compiles on 8GB hosts. Line tables keep usable backtraces.
[profile.dev]
debug = "line-tables-only"
