[package]
name = "h5i-core"
version = "0.2.8"
edition = "2021"
description = "h5i core domain library: git-backed provenance, sandboxed envs, agent teams, and cross-agent messaging."

[features]
# `web` compiles the `h5i serve` dashboard (axum + asset embedding). On by
# default so existing builds are unchanged; build with `--no-default-features`
# for a lean library that never pulls in axum/mime_guess.
default = ["web"]
web = ["dep:axum", "dep:mime_guess"]

[dependencies]
h5i-error = { path = "../h5i-error" }
h5i-sandbox = { path = "../h5i-sandbox" }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
thiserror = { workspace = true }
anyhow = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.3.0"
tiktoken-rs = "0.9.1"
console = "0.16.2"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# Web dashboard deps — optional, gated behind the `web` feature (on by default).
axum = { version = "0.7", optional = true }
toml = { workspace = true }
regex = "1"
rust-embed = "8.5"
mime_guess = { version = "2.0", optional = true }
tracing = "0.1"
libc = "0.2.186"

# When targeting musl, vendor OpenSSL so the build doesn't require a musl-linked
# system libssl (libgit2-sys → libssh2-sys → openssl-sys pulls this in).
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.8"
serde_json = { workspace = true }
